[tool.poetry]
name = "tiket"
version = "0.1.0"
description = ""
authors = ["miloszbednarzak <milosz.bednarzak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tiket = 'tiket.main:app'
